--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fb-utils",
-  "version": "0.0.0-development",
+  "version": "0.0.1-dev",
   "description": "Firebase utility functions to help working with firebase easier.",
   "main": "./lib/src/index.js",
   "files": [
@@ -29,7 +29,7 @@
     "url": "https://github.com/NazimHAli"
   },
   "engines": {
-    "node": ">=12.0"
+    "node": ">=14.0"
   },
   "keywords": [
     "firebase",
