--- a/package.json
+++ b/package.json
@@ -81,8 +81,18 @@
     "plugins": [
       "@semantic-release/commit-analyzer",
       "@semantic-release/release-notes-generator",
-      "@semantic-release/npm",
-      "@semantic-release/git"
+      [
+        "@semantic-release/github",
+        {
+          "assets": [
+            {
+              "path": "lib",
+              "label": "JS distribution"
+            }
+          ]
+        }
+      ],
+      "@semantic-release/npm"
     ]
   }
 }
