--- a/package.json
+++ b/package.json
@@ -86,7 +86,10 @@
         {
           "assets": [
             {
-              "path": "lib",
+              "path": [
+                "lib",
+                "!lib/test"
+              ],
               "label": "JS distribution"
             }
           ]
