--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -31,7 +31,7 @@ jobs:
           key: ${{ runner.os }}-yarn-${{ matrix.node-version }}-${{ hashFiles('**/yarn.lock') }}
 
       - name: Install
-        run: yarn install --prefer-offline --frozen-lockfile
+        run: yarn install --frozen-lockfile
 
       - name: Run Tests
         run: yarn workspaces foreach run test
