--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "packages/*"
   ],
   "scripts": {
+    "lintall": "prettier --check ./packages -w",
     "prepare": "husky install",
     "semantic-release": "semantic-release"
   },
@@ -40,6 +41,7 @@
     "@typescript-eslint/parser": "^5.4.0",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.3.0",
+    "esbuild": "^0.14.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-functional": "^3.7.2",
@@ -54,8 +56,7 @@
     "husky": "^7.0.4",
     "jest": "^27.3.1",
     "jest-junit": "^13.0.0",
-    "lerna": "^4.0.0",
-    "lint-staged": "^12.0.2",
+    "lint-staged": "^12.1.2",
     "prettier": "^2.5.0",
     "semantic-release": "^18.0.1",
     "ts-jest": "^27.0.7",
