--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "eslintIgnore": [
     ".pnp.js",
     ".yarn",
-    "**/dist/"
+    "**/dist"
   ],
   "jest": {
     "preset": "ts-jest"
@@ -41,7 +41,7 @@
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "commitizen": "^4.2.4",
-    "cz-conventional-changelog": "^3.3.0",
+    "cz-conventional-changelog": "3.3.0",
     "esbuild": "^0.14.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
@@ -102,7 +102,7 @@
   },
   "config": {
     "commitizen": {
-      "path": "cz-conventional-changelog"
+      "path": "./node_modules/cz-conventional-changelog"
     }
   }
 }
