--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   ],
   "scripts": {
     "cm": "cz",
+    "cm:test": "cz",
     "lintall": "prettier --check ./packages -w",
     "prepare": "husky install",
     "semantic-release": "semantic-release"
