--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,5 +1,7 @@
 enableTelemetry: false
 
+nodeLinker: node-modules
+
 packageExtensions:
   "@endemolshinegroup/cosmiconfig-typescript-loader@3":
     dependencies:
@@ -8,11 +10,5 @@ packageExtensions:
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
     spec: "@yarnpkg/plugin-workspace-tools"
-  - path: .yarn/plugins/@yarnpkg/plugin-typescript.cjs
-    spec: "@yarnpkg/plugin-typescript"
-  - path: .yarn/plugins/@yarnpkg/plugin-version.cjs
-    spec: "@yarnpkg/plugin-version"
 
 yarnPath: .yarn/releases/yarn-3.1.1.cjs
-
-nodeLinker: "node-modules"
