--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "fb-utils",
-  "version": "1.0.1",
-  "description": "Firebase utility functions to help working with firebase easier.",
+  "name": "frontend-monorepo-template",
+  "version": "1.0.0",
+  "description": "Monorepo template configured with Yarn 2, Typescript, automated Gihub releases and npm publishing.",
   "workspaces": [
     "packages/*"
   ],
@@ -13,8 +13,7 @@
   },
   "commitlint": {
     "extends": [
-      "@commitlint/config-conventional",
-      "@commitlint/config-lerna-scopes"
+      "@commitlint/config-conventional"
     ]
   },
   "eslintIgnore": [
@@ -29,7 +28,6 @@
     "@babel/core": "^7.16.0",
     "@commitlint/cli": "^15.0.0",
     "@commitlint/config-conventional": "^15.0.0",
-    "@commitlint/config-lerna-scopes": "^15.0.0",
     "@semantic-release/changelog": "^6.0.1",
     "@semantic-release/commit-analyzer": "^9.0.2",
     "@semantic-release/git": "^10.0.1",
@@ -47,22 +45,18 @@
     "eslint-plugin-functional": "^3.7.2",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jest": "^25.2.4",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.27.0",
-    "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "husky": "^7.0.4",
     "jest": "^27.3.1",
-    "jest-junit": "^13.0.0",
     "lint-staged": "^12.1.2",
     "prettier": "^2.5.0",
     "semantic-release": "^18.0.1",
     "ts-jest": "^27.0.7",
     "ts-node": "^10.2.1",
     "tsconfig-paths": "^3.12.0",
-    "typescript": "4.4.4"
+    "typescript": "^4.5.2"
   },
   "packageManager": "yarn@3.1.1",
   "release": {
@@ -75,7 +69,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/NazimHAli/fb-utils.git"
+    "url": "git+https://github.com/NazimHAli/frontend-monorepo-template.git"
   },
   "license": "MIT",
   "author": {
@@ -86,16 +80,16 @@
     "node": ">=14.0"
   },
   "keywords": [
-    "firebase",
-    "firestore",
-    "cloud-functions",
-    "data bundles",
-    "typescript"
+    "monorepo",
+    "template",
+    "typescript",
+    "workspaces",
+    "yarn"
   ],
   "bugs": {
-    "url": "https://github.com/NazimHAli/fb-utils/issues"
+    "url": "https://github.com/NazimHAli/frontend-monorepo-template/issues"
   },
-  "homepage": "https://github.com/NazimHAli/fb-utils#readme",
+  "homepage": "https://github.com/NazimHAli/frontend-monorepo-template#readme",
   "lint-staged": {
     "*": "yarn lintall"
   },
