--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   ],
   "scripts": {
     "cm": "cz",
+    "cleanall": "rm -rf ./node_modules && rm -rf ./packages/**/node_modules",
     "lintall": "prettier --check ./packages -w",
     "prepare": "husky install",
     "semantic-release": "semantic-release"
