--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "cm": "cz",
     "cleanall": "rm -rf ./node_modules && rm -rf ./packages/**/node_modules",
     "lintall": "prettier --check ./packages -w",
-    "prepare": "husky install",
+    "postinstall": "husky install",
+    "prepublishOnly": "pinst --disable",
+    "postpublish": "pinst --enable",
     "semantic-release": "semantic-release"
   },
   "commitlint": {
@@ -52,6 +54,7 @@
     "husky": "^7.0.4",
     "jest": "^27.3.1",
     "lint-staged": "^12.1.2",
+    "pinst": "^2.1.6",
     "prettier": "^2.5.0",
     "semantic-release": "^18.0.1",
     "ts-jest": "^27.0.7",
