--- a/package.json
+++ b/package.json
@@ -68,9 +68,13 @@
       "@semantic-release/commit-analyzer",
       "@semantic-release/release-notes-generator",
       ["@semantic-release/github", {
-        "assets": ["dist"]
+        "assets": [
+          {"path": "dist", "label": "distribution"}
+        ]
       }],
-      "@semantic-release/npm"
+      ["@semantic-release/npm", {
+        "pkgRoot": "dist"
+      }]
     ]
   },
   "repository": {
