--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lintall": "prettier --check ./packages -w",
     "postinstall": "husky install",
     "postpublish": "pinst --enable",
-    "postversion": "cp -r package.json .. && cp -r npm-shrinkwrap.json ..",
+    "postversion": "cp -r package.json ..",
     "prepublishOnly": "pinst --disable",
     "semantic-release": "semantic-release"
   },
